# fundamental-algorithms-2

./: CMakeLists.txt
lab1/task1/: CMakeLists.txt
lab1/task2/include/: list.h
lab1/task2/tests/: test_list.cpp
lab1/task3/include/: deque.h
lab2/task1/: CMakeLists.txt
lab2/task1/include/: bigint.h
lab2/task1/src/: main.cpp
lab2/task1/tests/: test_bigint.cpp
lab2/task2/: CMakeLists.txt
lab2/task2/include/: bigint.h
lab2/task2/tests/: test_bigint.cpp
lab2/task3/: CMakeLists.txt
lab2/task3/include/: bigint.h
lab2/task3/src/: main.cpp
lab2/task3/tests/: test_bigint.cpp
lab2/task4/: CMakeLists.txt
lab2/task5/: CMakeLists.txt
lab3/task1/: CMakeLists.txt
lab3/task1/include/: bst.h
lab3/task1/tests/: test_bst.cpp
